[package]
name = "lora-gw-rs"
authors = ['Mariusz Białończyk']
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.1"
log = "0.4.1"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
futures = "0.3.30"
tokio = {version = "*", features = ["full"] }
termios = "0.3.3"
tokio-serial = "5.4.4"
rppal = "0.19.0"
ctrlc = { version = "3.1.0", features = ["termination"] }
atomic_enum = "0.3.0"
